# Python_w_zastosowaniach_naukowych

./: pyproject.toml
lab01/: lab01.py  wiedzmin.txt  witcher.txt
lab02/: lab02.py  magnet.txt
lab03/: lab03.py
lab04/: lab04.py  magnet.txt
lab05/: fuel_prices.json  lab05.py
lab06/: lab06.py  pociagi.json
lab07/: lab07.py
lab08/: lab08.ipynb
